--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#26a69a</color>
+    <color name="colorPrimaryDark">#009688</color>
+    <color name="colorAccent">#26a69a</color>
+
+    <color name="title">#26a69a</color>
+    <color name="description">#AA26a69a</color>
+    <color name="description_grey">#888888</color>
+    <color name="bkg_dialog">#FEFEFE</color>
+    <color name="divider">#EEEEEE</color>
+
 </resources>
