--- a/app/src/main/res/layout/param_state_loading.xml
+++ b/app/src/main/res/layout/param_state_loading.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.victor.loading.rotate.RotateLoading xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rtlLoading"
-    android:layout_width="@dimen/loading_size"
-    android:layout_height="@dimen/loading_size"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="@dimen/extra_large_spacing"
-    app:loading_color="@color/colorAccent" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <com.victor.loading.rotate.RotateLoading
+        android:id="@+id/rtlLoading"
+        android:layout_width="@dimen/loading_size"
+        android:layout_height="@dimen/loading_size"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="@dimen/extra_large_spacing"
+        app:loading_color="@color/colorAccent" />
+</RelativeLayout>
