--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -9,4 +9,12 @@
         android:summary="@string/units_summary"
         android:title="@string/unit_format" />
 
+    <ListPreference
+        android:defaultValue="en"
+        android:entries="@array/languages"
+        android:entryValues="@array/languages_values"
+        android:key="PREF_LANGUAGE"
+        android:summary="@string/language_summary"
+        android:title="@string/language" />
+
 </PreferenceScreen>
