--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
 
     <dimen name="btn_height">48dp</dimen>
 
+    <dimen name="widget_width">100dp</dimen>
+    <dimen name="widget_height">20dp</dimen>
+
 </resources>
